# Arche

./: .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .pr_agent.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  SECURITY.md  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.agents/skills/arche-dev/: SKILL.md
.claude/: instructions.md  settings.json  settings.local.json
.claude/rules/: commands.md  constitution.md  engineering.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  custom.md  epic.md  feature_request.md  feature_request.yml
.github/workflows/: adversarial.yml  ai-docs.yml  ai-issues.yml  ai-split.yml  build.yml  ci.yml  deploy.yml  label-sync.yml  lint.yml  nitpicks.yml  pr-agent.yml  pr-labeler.yml  release.yml  security.yml  stale.yml  test.yml
.trae/rules/: git-commit-message.md  issue-fix-workflow.md  issues-management-workflow.md
.trae/skills/arche-dev/: SKILL.md
.trae/skills/commans/: SKILL.md
.trae/specs/admin-console-refactor/: checklist.md  spec.md  tasks.md
.trae/specs/create-page-enhancement/: checklist.md  spec.md  tasks.md
.trae/specs/fix-pr63-oss-tests-and-code-review/: checklist.md  spec.md  tasks.md
.trae/specs/fix-ui-ux-review/: checklist.md  spec.md  tasks.md
.trae/specs/frontend-aesthetic-redesign/: checklist.md  spec.md  tasks.md
.trae/specs/production-issue-fix-v1/: checklist.md  spec.md  tasks.md
.trae/specs/unify-blog-card/: checklist.md  spec.md  tasks.md
backend/: main.py
backend/core/: __init__.py  base_plugin.py  config.py  container.py  db.py  middleware.py  models.py  plugin_registry.py  rate_limiter.py  uid.py
backend/core/settings/: __init__.py  app.py  base.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_email.py  003_orchestration.py  004_config_entries.py  005_cloud_workspace.py  006_monitor_templates.py  007_blog_favorites.py  008_unify_permission_levels.py  009_blog_paragraph_comment.py  010_add_user_soft_delete_fields.py  011_add_sid.py  5248c2a139f6_add_cover_url_to_blog_posts.py
backend/plugins/: __init__.py  blog.py
backend/plugins/asset_mgmt/: __init__.py  models.py  routes.py  services.py
backend/plugins/auth/: __init__.py  middleware.py  models.py  routes.py  services.py  session.py
backend/plugins/blog/: __init__.py  models.py  routes.py  sensitive_words.py  services.py  settings.py
backend/plugins/cloud_integration/: __init__.py  log_parser.py  models.py  orchestrator.py  routes.py  services.py  settings.py  steps.py
backend/plugins/config_mgmt/: __init__.py  routes.py
backend/plugins/crawler/: __init__.py  browser.py  link_extractor.py  models.py  probe.py  rate_limiter.py  robots_checker.py  routes.py  seed_manager.py  services.py  settings.py  tasks.py  url_dedup.py  url_scheduler.py
backend/scripts/: coverage_inventory.py  generate_env_example.py  seed_blog.py  seed_cloud_data.py
backend/tests/: CLOUD_TEST_MAP.md  CRAWLER_TEST_MAP.md  INTEGRATION_TEST_MAP.md  MONITOR_TEST_MAP.md  TEST_STRATEGY.md  conftest.py
content/: 01-spring-notes.md  02-midnight-reading.md  03-city-walk.md  04-photo-story.md  05-dev-journal.md  06-weekly-review.md
deploy/: .env.example  docker-compose.yml  nginx.conf
docs/: 01-需求文档.md  02-需求分析.md  03-架构设计.md  04-详细设计.md  05-GitHub中转方案调研.md  06-测试计划.md  07-部署计划.md  08-漫游爬虫设计.md  09-锦年志-品牌与信息架构一页纸.md  10-首页导航与页脚-Figma规范.md  MACA-云集成-主.md
docs/blog/: wheel-picker-physics-engine.md
docs/coverage-reports/: coverage-report-2026-06-10.md
docs/pai-dlc/: 01-服务概览.md  02-快速入门.md  03-镜像系统.md  04-计费与试用.md  05-存储与挂载.md  06-API参考.md  07-SDK使用.md  08-MindCore接入方案.md  README.md
docs/zhixingyun_api/: 01_开始使用.md  02_接口约定.md  03_接口签名.md  04_接口顺序.md  05_参考代码_Python3.md  06_关于实例.md  07_实例访问.md  08_实例状态.md  09_创建云主机.md  10_创建云主机询价.md  11_获取云主机租用选项.md  12_获取实例规格列表.md  13_获取自主实例列表.md  14_获取自主实例详情.md  15_获取实例状态统计.md  16_启动实例.md  17_重启实例.md  18_释放保留的磁盘.md  19_提前退租询价.md  20_提前退租.md  21_获取本地可用镜像.md  22_重置系统.md
examples/: api-log-data.py  comment-data.py  moderation-data.py  nickname-blacklist.py  permission-data.py  post-data.py  tag-data.py  token-data.py  user-data.py
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  vite.config.js  vite.config.ts  vitest.setup.ts
frontend/docs/: api-call-policy.md  api-contract.md
frontend/scripts/: check-test-coverage.mjs  collect-css.mjs  generate-api-types.mjs
frontend/src/: App.vue  README.md  main.js  main.ts  style.css
frontend/src/api/: oss.js  (+11 more)
frontend/tests/: BlogShell.test.js  Dashboard.test.js  Home.test.js  Login.test.js  PlatformShell.test.js  Post.test.js  Register.test.js  TodoPanel.test.js  WidgetCanvas.test.js  WidgetPicker.test.js  auth.test.js  component-registry.test.js  dock.test.js  router.test.js  setup.js  widgetRegistry.test.js
nginx/: nginx.conf
scripts/: lint_rules.py  run_tests.py  test_api_smoke.py  test_console_route.py
scripts/testgen/: __main__.py  main.py  orchestrator.py
tests/: conftest.py
tests/test_core/: test_config.py  test_container.py  test_plugin_registry.py
tests/test_e2e/: test_user_flow.py
tests/test_plugins/: test_auth.py  test_blog.py  test_github_proxy.py  test_oss.py
(+525 files in other folders)
