[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arche"
version = "0.4.0"
description = "Personal modular platform - microkernel architecture"
license = "Apache-2.0"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["backend/"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "alembic>=1.18.4",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "python-multipart>=0.0.26",
    # System monitoring
    "psutil>=5.9",
    # Aliyun ECS SDK (cloud training provider)
    "aliyun-python-sdk-core>=2.13",
    "aliyun-python-sdk-ecs>=4.24",
    # Aliyun OSS SDK
    "oss2>=2.18",
    # MinIO SDK (local object storage)
    "minio>=7.2",
    # SSH/SFTP (cloud training remote deployment)
    "asyncssh>=2.14",
    # Async file operations
    "aiofiles>=23.0",
    # HTML parsing (crawler link extraction)
    "beautifulsoup4>=4.12",
    # DOCX parsing (blog import)
    "python-docx>=1.1",
    # SQLite async driver (dev default)
    "aiosqlite>=0.20",
    # PostgreSQL async driver (production)
    "asyncpg>=0.30",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.11",
    "pytest-playwright>=0.8.0",
    "typer>=0.26.7",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
    "bandit>=1.8.0",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/*/__init__.py",
    "backend/scripts/*",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
norecursedirs = [".venv", "node_modules", "frontend", "scripts", "e2e"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: 标记慢速测试（需要网络）",
    "integration: 标记集成测试",
    "e2e: 标记端到端测试",
    "cli: 标记需要 GitHub CLI 的测试",
    "http: 标记需要 HTTP 连接的测试",
]

[tool.setuptools.packages.find]
where = ["backend"]